--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
             <p>I made lot of videos on different subjects. My first priority is making the subject more interesting and give you a clear understanding so you can feel it and don’t get bore.</p> 
 
             <hr class="aboutme-hr">
-            <p>Name: Anisul Islam</p> 
+            <p>Name: Mansur Ahmed</p> 
             <hr class="aboutme-hr">
             <p>Address: Tampere, Finland</p>
             <hr class="aboutme-hr">
-            <p>Email: <a href="mailto:anisul2010s@yahoo.co.uk">anisul2010s@yahoo.co.uk</a> </p>
+            <p>Email: <a href="mailto:mansurahmed75236@gmail.com">mansurahmed75236@gmail.com</a> </p>
             <hr class="aboutme-hr">
-            <p>Phone: <a href="tel:+358466150008">+35846615000</a> </p>
+            <p>Phone: <a href="tel:+8801785598944">+8801785598944</a> </p>
             <hr class="aboutme-hr">
-            <p>Website: <a href="http://www.studywithanis.com" target="blank">www.studywithanis.com</a> </p>
+            <p>Website: <a href="http://www.studywithmansur.com" target="blank">studywithmansur.com</a> </p>
             <hr class="aboutme-hr">
 
             <p>
@@ -272,7 +272,7 @@
         </div>
 
         <div class="footer-desc col-6">
-            &copy; Anis 2020. Developed with <span style="color: red; font-size: 1.5rem;">❤</span> by Anis.
+            &copy; Mansur 2022. Developed with <span style="color: red; font-size: 1.5rem;">❤</span> by Mansur.
         </div>
     </div>
     <!-- footer ends here  -->
